canary/manifest/cic-vpx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cic-k8s-ingress-controller
  labels:
    name: cic-k8s-ingress-controller
spec:
      serviceAccountName: cpx
      containers:
      - name: cic-k8s-ingress-controller
        image: "quay.io/netscaler/netscaler-k8s-ingress-controller:4.1.17"
        args:
          - --ingress-classes
            canarydemo
          - --feature-node-watch
            true
        imagePullPolicy: Always
