canary/manifest/cic.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cic-k8s-ingress-controller
  labels:
    app: cic-k8s-ingress-controller
spec:
      serviceAccountName: cpx
      containers:
      - name: cic-k8s-ingress-controller
        image: " quay.io/citrix/citrix-k8s-ingress-controller:canary-b1"
        imagePullPolicy: Always
        args:
        - --ingress-classes
            canarydemo
        imagePullPolicy: Always
