canary/manifest/production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: fronthotdrinksapp
  name: fronthotdrinksapp-prod-deployment
  namespace: default
spec:
  replicas: 4
  selector:
    matchLabels:
      dep: cddep
      name: fronthotdrinksapp
  strategy:
    rollingUpdate:
      maxSurge: 10
      maxUnavailable: 10
    type: RollingUpdate
  template:
    metadata:
      labels:
        dep: cddep
        name: fronthotdrinksapp
    spec:
      containers:
      - image: quay.io/sample-apps/fronthotdrinksapp:v1
        imagePullPolicy: Always
        name: fronthotdrinksapp
        ports:
        - containerPort: 8080
          name: port-8080
          protocol: TCP
