canary/manifest/cpx-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: cpx-ingress
  name: cpx-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      name: cpx-ingress
  template:
    metadata:
      annotations:
        NETSCALER_AS_APP: "True"
      labels:
        name: cpx-ingress
    spec:
      serviceAccountName: cpx
      containers:
      - args:
        - --target-nsip=127.0.0.1
        - --port=8888
        - --secure=no
        image: quay.io/citrix/citrix-adc-metrics-exporter:1.4.9
        imagePullPolicy: Always
        name: exporter
        securityContext:
          readOnlyRootFilesystem: true
      - env:
        - name: EULA
          value: "YES"
        - name: KUBERNETES_TASK_ID
        image: quay.io/netscaler/netscaler-cpx:14.1-66.59
        imagePullPolicy: Always
        name: cpx-ingress
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        - containerPort: 9080
          name: nitro-http
          protocol: TCP
        - containerPort: 9443
          name: nitro-https
          protocol: TCP
        #This is required for Health check to succeed
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 9080
            scheme: HTTP
        securityContext:
          privileged: true
---
kind: Service
apiVersion: v1
metadata:
  name: cpx-ingress
  labels:
    name: cpx-ingress
spec:
        #externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    name: cpx-ingress
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
---
kind: Service
apiVersion: v1
metadata:
  name: exporter
  labels:
    name: exporter
spec:
  type: ClusterIP
  selector:
    name: cpx-ingress
  ports:
    - name: exporter-port
      port: 8888
      targetPort: 8888
