canary/manifest/cpx-with-cic-sidecar.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: cpx-ingress
  name: cpx-ingress-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: cpx-ingress
  template:
    metadata:
      annotations:
        NETSCALER_AS_APP: "True"
      labels:
        name: cpx-ingress
      name: cpx-ingress
    spec:
      serviceAccountName: cpx
      containers:
      - args:
        - --target-nsip=127.0.0.1
        - --port=8888
        - --secure=no
        image: quay.io/citrix/citrix-adc-metrics-exporter:1.4.9
        imagePullPolicy: Always
        name: exporter
        securityContext:
          readOnlyRootFilesystem: true
      - env:
        - name: EULA
          value: "yes"
        - name: NS_IP
          value: 127.0.0.1
        - name: NS_PROTOCOL
          value: HTTP
        - name: NS_PORT
          value: "80"
        - name: NS_DEPLOYMENT_MODE
          value: SIDECAR
        - name: NS_ENABLE_MONITORING
          value: "YES"
        - name: cic-k8s-ingress-controller
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: default
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        image: quay.io/netscaler/netscaler-k8s-ingress-controller:4.1.17
        imagePullPolicy: Always
        name: cic-k8s-ingress-controller
      - args:
        - --ingress-classes canarydemo
        image: quay.io/netscaler/netscaler-cpx:14.1-66.59
        imagePullPolicy: Always
        name: cpx-ingress
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        - containerPort: 9080
          name: nitro-http
          protocol: TCP
        - containerPort: 9443
          name: nitro-https
          protocol: TCP
        securityContext:
          privileged: true
---
kind: Service
apiVersion: v1
metadata:
  name: cpx-ingress
  labels:
    name: cpx-ingress
spec:
        #externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    name: cpx-ingress
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
    - name: nitro-http
      port: 9080
      nodePort: 30328
    - name: nitro-https
      port: 9443
---
kind: Service
apiVersion: v1
metadata:
  name: exporter
  labels:
    name: exporter
spec:
  type: NodePort
  selector:
    name: cpx-ingress
  ports:
    - name: exporter-port
      port: 8888
      targetPort: 8888
      nodePort: 30329
