canary/manifest/exporter.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exporter
  labels:
    name: exporter
spec:
  containers:
    - name: exporter
      image: "quay.io/citrix/citrix-adc-metrics-exporter:1.4.2"
      args:
        - "--target-nsip=x.x.x.x"
        - "--port=8888"
      imagePullPolicy: Always
      volumeMounts:
      - name: nslogin
        mountPath: "/mnt/nslogin"
        readOnly: true
      securityContext:
        readOnlyRootFilesystem: true
  volumes:
  - name: nslogin
    secret:
      secretName: nslogin
---
apiVersion: v1
kind: Service
metadata:
  name: exporter
  labels:
    name: exporter
spec:
  type: NodePort
  ports:
  - port: 8888
    targetPort: 8888
    name: exporter-port
    nodePort: 30329
  selector:
    name: exporter
