canary/manifest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fronthotdrinksapp
  namespace: default
  annotations:
spec:
  clusterIP: None
  ports:
  - name: port-8080
    port: 8080
    targetPort: 8080
  selector:
    dep: cddep
