canary/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {}
  name: fronthotdrinksapp
  namespace: default
spec:
  ingressClassName: canarydemo
  rules:
  - host: canarydemo.com
    http:
      paths:
      - backend:
          service:
            name: fronthotdrinksapp
            port:
              number: 8080
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: canarydemo
spec:
  controller: citrix.com/ingress-controller
---
